@@ -1,6 +1,7 @@
 libcm4all-was (1.2) unstable; urgency=low
 
   * simple: fix assertion failure after receiving STOP from web server
+  * simple: don't send STOP if control channel is finalized
   * apreq: implement the query string parser
   * istub: implement close()
 
